--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "com.padoru.movement-lib",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "displayName": "Padoru Movement",
   "description": "A library to handle movement in Unity games",
-  "unity": "2020.3"
+  "unity": "2020.3",
+  "author": {
+    "name": "Padoru Games",
+    "url": "https://github.com/PadoruGames/movement-lib"
+  }
 }
